# mte-informacoes-sei

./: README.md
infra/: Dockerfile
src/: .env  main.py  pyproject.toml
src/api/v1/: processar_documentos.py  router.py
src/core/: config.py
