[tool.poetry]
name = "mte-informacoes-sei"
version = "0.1.0"
description = "Engine de IA para triagem e processamento de documentos do MTE"
authors = ["Gabriel Sousa <seu-email@exemplo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
gunicorn = "^21.2.0"
polars = {extras = ["all"], version = "^0.20.0"}
connectorx = "^0.3.2"
joblib = "^1.3.0"
torch = "^2.2.0"
tensorflow = "^2.15.0"
scikit-learn = "^1.4.0"
sentence-transformers = "^2.3.0"
easyocr = "^1.7.1"
spacy = "^3.7.0"
pysbd = "^0.3.4"
flashtext = "^2.7"
teradatasql = "^17.20.0.0"
sqlalchemy = "^2.0.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"